# harmonization

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  appveyor.yml  config.yaml  meson.build  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cibuildwheel.yml
glmnet/: README.md  _glmnet-f2pywrappers.f  _glmnetmodule.c  glmnet.f  glmnet.pyf
harmonization/: D_upsampler.py  config.py  dictionary.py  elastic_net.py  enet.py  patch_D.py  patch_D_config.py  rebuild_from_D.py  rebuild_from_D_config.py  recon.py  scripts.py  solver.py  tensor_sc.py
harmonization/glmnet/: README.md  glmnet.pyf
harmonization/tests/: test_config.py  test_scripts.py
harmonization/tests/datasets/: config.yaml  config_upscale.yaml
harmonization/tests/datasets/subj1/: dwi.bvecs
harmonization/tests/datasets_bids/: config_bids.yaml  config_upscale_bids.yaml
harmonization/tests/datasets_bids/subj1-bids/dwi/: subj1-dwi.bvals
harmonization/tests/datasets_bids/subj2-bids/dwi/: subj2-dwi.bvals  subj2-dwi.bvecs
scripts/: harmonization_build_dictionary  harmonization_from_dictionary
